Opened 10 years ago
Closed 10 years ago
#6072 closed defect (fixed)
Support dss version 3
| Reported by: | Vineet Goel | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | dss |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
How to reproduce:
ffmpeg started on 2017-01-11 at 11:20:25
Report written to "ffmpeg-20170111-112025.log"
Command line:
/usr/local/bin/ffmpeg -report -i WelcomeToSpeechExec.dss output.wav
ffmpeg version N-83040-g184c13f64a-static http://johnvansickle.com/ffmpeg/ Copyright (c) 2000-2017 the FFmpeg developers
built with gcc 5.4.1 (Debian 5.4.1-4) 20161202
configuration: --enable-gpl --enable-version3 --enable-static --disable-debug --disable-ffplay --disable-indev=sndio --disable-outdev=sndio --cc=gcc-5 --enable-fontconfig --enable-frei0r --enable-gnutls --enable-gray --enable-libass --enable-libfreetype --enable-libfribidi --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libvidstab --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxvid --enable-libzimg
libavutil 55. 43.100 / 55. 43.100
libavcodec 57. 71.101 / 57. 71.101
libavformat 57. 62.100 / 57. 62.100
libavdevice 57. 2.100 / 57. 2.100
libavfilter 6. 68.100 / 6. 68.100
libswscale 4. 3.101 / 4. 3.101
libswresample 2. 4.100 / 2. 4.100
libpostproc 54. 2.100 / 54. 2.100
Splitting the commandline.
Reading option '-report' ... matched as option 'report' (generate a report) with argument '1'.
Reading option '-i' ... matched as input url with argument 'WelcomeToSpeechExec.dss'.
Reading option 'output.wav' ... matched as output url.
Finished splitting the commandline.
Parsing a group of options: global .
Applying option report (generate a report) with argument 1.
Successfully parsed a group of options.
Parsing a group of options: input url WelcomeToSpeechExec.dss.
Successfully parsed a group of options.
Opening an input file: WelcomeToSpeechExec.dss.
[file @ 0x3e188c0] Setting default whitelist 'file,crypto'
[dss @ 0x3e18060] Format dss detected only with low score of 1, misdetection possible!
[dss @ 0x3e18060] Before avformat_find_stream_info() pos: 1024 bytes read:235520 seeks:0 nb_streams:1
[dss @ 0x3e18060] Estimating duration from bitrate, this may be inaccurate
[dss @ 0x3e18060] After avformat_find_stream_info() pos: 1072 bytes read:235520 seeks:0 frames:0
Input #0, dss, from 'WelcomeToSpeechExec.dss':
Metadata:
author :
date : 2007-01-01T01:01:01
comment :
Duration: 00:02:15.35, start: 0.000000, bitrate: 13 kb/s
Stream #0:0, 0, 1/11025: Audio: dss_sp, 11025 Hz, mono, s16
Successfully opened the file.
Parsing a group of options: output url output.wav.
Successfully parsed a group of options.
Opening an output file: output.wav.
[file @ 0x3e1da60] Setting default whitelist 'file,crypto'
Successfully opened the file.
detected 1 logical cores
[graph 0 input from stream 0:0 @ 0x3e1dca0] Setting 'time_base' to value '1/11025'
[graph 0 input from stream 0:0 @ 0x3e1dca0] Setting 'sample_rate' to value '11025'
[graph 0 input from stream 0:0 @ 0x3e1dca0] Setting 'sample_fmt' to value 's16'
[graph 0 input from stream 0:0 @ 0x3e1dca0] Setting 'channel_layout' to value '0x4'
[graph 0 input from stream 0:0 @ 0x3e1dca0] tb:1/11025 samplefmt:s16 samplerate:11025 chlayout:0x4
[audio format for output stream 0:0 @ 0x3e1ec80] Setting 'sample_fmts' to value 's16'
[AVFilterGraph @ 0x3e1e620] query_formats: 4 queried, 9 merged, 0 already done, 0 delayed
Output #0, wav, to 'output.wav':
Metadata:
author :
ICRD : 2007-01-01T01:01:01
ICMT :
ISFT : Lavf57.62.100
Stream #0:0, 0, 1/11025: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 11025 Hz, mono, s16, 176 kb/s
Metadata:
encoder : Lavc57.71.101 pcm_s16le
Stream mapping:
Stream #0:0 -> #0:0 (dss_sp (native) -> pcm_s16le (native))
Press [q] to stop, [?] for help
cur_dts is invalid (this is harmless if it occurs once at the start per stream)
WelcomeToSpeechExec.dss: Invalid data found when processing input
cur_dts is invalid (this is harmless if it occurs once at the start per stream)
cur_dts is invalid (this is harmless if it occurs once at the start per stream)
cur_dts is invalid (this is harmless if it occurs once at the start per stream)
[output stream 0:0 @ 0x3e17f60] EOF on sink link output stream 0:0:default.
No more output streams to write to, finishing.
size= 0kB time=00:00:00.00 bitrate=N/A speed= 0x
video:0kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: unknown
Input file #0 (WelcomeToSpeechExec.dss):
Input stream #0:0 (audio): 0 packets read (0 bytes); 0 frames decoded (0 samples);
Total: 0 packets (0 bytes) demuxed
Output file #0 (output.wav):
Output stream #0:0 (audio): 0 frames encoded (0 samples); 0 packets muxed (0 bytes);
Total: 0 packets (0 bytes) muxed
Output file is empty, nothing was encoded (check -ss / -t / -frames parameters if used)
0 frames successfully decoded, 0 decoding errors
[AVIOContext @ 0x3e1db40] Statistics: 4 seeks, 3 writeouts
[AVIOContext @ 0x3e20c60] Statistics: 235520 bytes read, 0 seeks
I have tried transcoding from dss to mp3 as well, but it gives same errors.
The input dss file is attached for reference. Input dss file playback is flawless in DSS player for Mac, so the input file has correct format.
Attachments (1)
Change History (11)
by , 10 years ago
| Attachment: | WelcomeToSpeechExec.dss added |
|---|
comment:1 by , 10 years ago
| Summary: | I am trying to transcode from dss to wav → Transcoding DSS (Digital Speech Standard) To WAV |
|---|
comment:2 by , 10 years ago
Summary of the bug: Following error occurs "Invalid data found when processing input", even though ffmpeg recognises the input file as dss format and its dss_sp codec
comment:3 by , 10 years ago
| Component: | ffmpeg → avcodec |
|---|---|
| Keywords: | dss added |
| Reproduced by developer: | set |
| Status: | new → open |
| Summary: | Transcoding DSS (Digital Speech Standard) To WAV → Support dss version 3 |
comment:4 by , 10 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Should be fixed in f55da2200dbf98311969e0f345edbc82177d4836, thank you for the sample!
comment:5 by , 10 years ago
Thank you.
It works now, but there is a new issue.
only 07.93 seconds of output is generated and then it shows error "Invalid data found when processing input"
How to reproduce:
ffmpeg started on 2017-01-12 at 09:18:33
Report written to "ffmpeg-20170112-091833.log"
Command line:
/usr/local/ffmpeg/bin/ffmpeg -report -i WelcomeToSpeechExec.dss WelcomeOuput.wav
ffmpeg version N-83049-ge71b811 Copyright (c) 2000-2017 the FFmpeg developers
built with gcc 4.9.2 (Debian 4.9.2-10)
configuration: --prefix=/usr/local/ffmpeg --enable-static
libavutil 55. 43.100 / 55. 43.100
libavcodec 57. 72.100 / 57. 72.100
libavformat 57. 62.100 / 57. 62.100
libavdevice 57. 2.100 / 57. 2.100
libavfilter 6. 68.100 / 6. 68.100
libswscale 4. 3.101 / 4. 3.101
libswresample 2. 4.100 / 2. 4.100
Splitting the commandline.
Reading option '-report' ... matched as option 'report' (generate a report) with argument '1'.
Reading option '-i' ... matched as input url with argument 'WelcomeToSpeechExec.dss'.
Reading option 'WelcomeOuput.wav' ... matched as output url.
Finished splitting the commandline.
Parsing a group of options: global .
Applying option report (generate a report) with argument 1.
Successfully parsed a group of options.
Parsing a group of options: input url WelcomeToSpeechExec.dss.
Successfully parsed a group of options.
Opening an input file: WelcomeToSpeechExec.dss.
[file @ 0x38dbf40] Setting default whitelist 'file,crypto'
[dss @ 0x38db5e0] Format dss probed with size=2048 and score=100
[dss @ 0x38db5e0] Before avformat_find_stream_info() pos: 1536 bytes read:32768 seeks:0 nb_streams:1
[dss @ 0x38db5e0] All info found
[dss @ 0x38db5e0] Estimating duration from bitrate, this may be inaccurate
[dss @ 0x38db5e0] After avformat_find_stream_info() pos: 3616 bytes read:32768 seeks:0 frames:50
Input #0, dss, from 'WelcomeToSpeechExec.dss':
Metadata:
author :
date : 2007-01-01T01:01:01
comment :
Duration: 00:02:15.06, start: 0.000000, bitrate: 13 kb/s
Stream #0:0, 50, 1/11025: Audio: dss_sp, 11025 Hz, mono, s16
Successfully opened the file.
Parsing a group of options: output url WelcomeOuput.wav.
Successfully parsed a group of options.
Opening an output file: WelcomeOuput.wav.
[file @ 0x38f0ec0] Setting default whitelist 'file,crypto'
Successfully opened the file.
detected 1 logical cores
[graph 0 input from stream 0:0 @ 0x38f99e0] Setting 'time_base' to value '1/11025'
[graph 0 input from stream 0:0 @ 0x38f99e0] Setting 'sample_rate' to value '11025'
[graph 0 input from stream 0:0 @ 0x38f99e0] Setting 'sample_fmt' to value 's16'
[graph 0 input from stream 0:0 @ 0x38f99e0] Setting 'channel_layout' to value '0x4'
[graph 0 input from stream 0:0 @ 0x38f99e0] tb:1/11025 samplefmt:s16 samplerate:11025 chlayout:0x4
[audio format for output stream 0:0 @ 0x38fa440] Setting 'sample_fmts' to value 's16'
[AVFilterGraph @ 0x38f9700] query_formats: 4 queried, 9 merged, 0 already done, 0 delayed
Output #0, wav, to 'WelcomeOuput.wav':
Metadata:
author :
ICRD : 2007-01-01T01:01:01
ICMT :
ISFT : Lavf57.62.100
Stream #0:0, 0, 1/11025: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 11025 Hz, mono, s16, 176 kb/s
Metadata:
encoder : Lavc57.72.100 pcm_s16le
Stream mapping:
Stream #0:0 -> #0:0 (dss_sp (native) -> pcm_s16le (native))
Press [q] to stop, [?] for help
cur_dts is invalid (this is harmless if it occurs once at the start per stream)
WelcomeToSpeechExec.dss: Invalid data found when processing input
[output stream 0:0 @ 0x38fa120] EOF on sink link output stream 0:0:default.
No more output streams to write to, finishing.
size= 171kB time=00:00:07.92 bitrate= 176.5kbits/s speed= 367x
video:0kB audio:171kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.060652%
Input file #0 (WelcomeToSpeechExec.dss):
Input stream #0:0 (audio): 331 packets read (13902 bytes); 331 frames decoded (87384 samples);
Total: 331 packets (13902 bytes) demuxed
Output file #0 (WelcomeOuput.wav):
Output stream #0:0 (audio): 331 frames encoded (87384 samples); 331 packets muxed (174768 bytes);
Total: 331 packets (174768 bytes) muxed
331 frames successfully decoded, 0 decoding errors
[AVIOContext @ 0x38f8fa0] Statistics: 4 seeks, 334 writeouts
[AVIOContext @ 0x38e4260] Statistics: 32768 bytes read, 0 seeks
Input file has 2 minute 15 seconds of duration, but output file has 7 seconds of duration. Although the output file playback is fine.
Output file is attached as well.
comment:6 by , 10 years ago
Should be fixed, thank you for testing again!
Please do not upload output files unless asked, they nearly always lead to confusion.
comment:8 by , 10 years ago
| Resolution: | fixed |
|---|---|
| Status: | closed → reopened |
comment:10 by , 10 years ago
| Resolution: | → fixed |
|---|---|
| Status: | reopened → closed |
I thought I had to reopen it for fixing of subsequent issue mentioned in my comment.
I didn't see that a commit# f31bac596f93e02b49d04733e57770e183a3d0c8 has already been applied.
Marking this fixed, and sorry for the confusion!
Thank you



Input dss file as used in the command line