lavf/dss: Do not fail randomly if dss_sp input contains 0xff.

Fixes decoding the sample from ticket #6072 with ffmpeg.